# hf_downloader

./: .gitignore  README.md  pyproject.toml
hf_downloader/: cli.py  core.py
hf_mirror_downloader/: __init__.py
